--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gazprom-neft-test",
   "version": "0.1.0",
+  "homepage": "https://offme16.github.io/template",
   "private": true,
   "dependencies": {
     "@consta/icons": "^0.9.2",
